# oldpy2store

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
extras/: pybay_2019.ipynb
py2store/: __init__.py  access.py  appendable.py  base.py  caching.py  core.py  dig.py  filesys.py  misc.py  mixins.py  sources.py  trans.py  util.py
py2store/examples/: kv_walking.py  python_code_stats.py  write_caches.py
py2store/ext/: __init__.py  audio.py  dataframes.py  gitlab.py  hdf.py  matlab.py  module_imports.py  wordnet.py
py2store/key_mappers/: naming.py  paths.py  tuples.py
py2store/my/: grabbers.py
py2store/persisters/: _postgres_w_psycopg2_in_progress.py  arangodb_w_pyarango.py  couchdb_w_couchdb.py  dropbox_w_dropbox.py  dropbox_w_requests.py  dropbox_w_urllib.py  dynamodb_w_boto3.py  ftp_persister.py  googledrive_w_pydrive.py  local_files.py  mongo_w_pymongo.py  new_s3.py  redis_w_redis.py  s3_w_boto3.py  sql_w_odbc.py  sql_w_sqlalchemy.py  ssh_persister.py  w_aiofile.py
py2store/scrap/: new_gen_local.py
py2store/serializers/: audio.py  pickled.py  sequential.py
py2store/slib/: s_configparser.py  s_zipfile.py
py2store/stores/: arangodb_store.py  couchdb_store.py  delegation_stores.py  dropbox_store.py  local_store.py  mongo_store.py  s3_store.py  sql_w_sqlalchemy.py
py2store/test/: local_files_test.py  quick_test.py  util.py
py2store/utils/: appendable.py  explicit.py  glom.py  mappify.py  (+4 more)
tests/: all_tests.py  test_arangodb.py  test_dropbox.py  test_dropbox_w_requests.py  test_simple.py  test_sql_w_sqlalchemy.py  test_trans.py
