[metadata]
name = oldpy2store
version = 0.0.2
url = https://github.com/thorwhalen/oldpy2store
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Old version of py2store
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = oldpy2store

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

